<resources>
    <string name="app_name">Calculator Application</string>
    <string name="action_settings">Settings</string>

    <string name="tvNumber1">Number 1:</string>
    <string name="tvNumber2">Number 2:</string>
    <string name="tvResult">Result:</string>
    <string name="tvValueOfTheResult"></string>

    <string name="btAddition">+</string>
    <string name="btSubtraction">-</string>
    <string name="btMultiplication">*</string>
    <string name="btDivision">/</string>


</resources>
