<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.calculator.rafaelsilva.calculator_android.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNumber1"
        android:id="@+id/tvNumber1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etNumber1"
        android:layout_below="@+id/tvNumber1"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNumber2"
        android:id="@+id/tvNumber2"
        android:layout_below="@+id/etNumber1"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etNumber2"
        android:layout_below="@+id/tvNumber2"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btAddition"
        android:id="@+id/btAddition"
        android:layout_below="@+id/etNumber2"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btSubtraction"
        android:id="@+id/btSubtraction"
        android:layout_alignTop="@+id/btAddition"
        android:layout_toEndOf="@+id/btAddition" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btMultiplication"
        android:id="@+id/btMultiplication"
        android:layout_alignBottom="@+id/btSubtraction"
        android:layout_toEndOf="@+id/btSubtraction" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btDivision"
        android:id="@+id/btDivision"
        android:layout_alignBottom="@+id/btMultiplication"
        android:layout_toEndOf="@+id/btMultiplication" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvResult"
        android:id="@+id/tvResult"
        android:layout_below="@+id/btAddition"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvValueOfTheResult"
        android:id="@+id/tvResultValue"
        android:layout_below="@+id/tvResult"
        android:layout_alignParentStart="true" />
</RelativeLayout>
